cleanup and modularize